css/main.css
/* ... */
.product-listing { /* The big DIV that holds all of the product info together */
  display:inline-block;
  -webkit-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.25);
  -moz-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.25);
  box-shadow: 0 0 1rem 0 rgba(0,0,0,0.25);
  -webkit-transition: box-shadow 0.5s ease-out;
  -moz-transition: box-shadow 0.5s ease-out;
  transition: box-shadow 0.5s ease-out;
  margin:0;
}

.product-listing:hover, .product-listing:focus { /* Setting up box-shadow transitions on a hover/focus state */
  -webkit-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.75);
  -moz-box-shadow: 0 0 1rem 0 rgba(0,0,0,0.75);
  box-shadow: 0 0 1rem 0 rgba(0,0,0,0.75);
}

p.product-name { /* The paragraph that holds the product's name */
  color:#515151;
  font-size:1.5rem;
  font-family: 'Montserrat', Arial, Verdana, serif;
  font-weight: bold;
  margin-bottom:0;
  -webkit-transition: color 0.3s ease-out;
  -moz-transition: color 0.3s ease-out;
  transition: color 0.3s ease-out;
}

p.product-price, p.product-date, p.product-sold { /* The paragraph that holds the product's price, date, and sell numbers */
  color:#515151;
  font-size:0.9rem;
  font-family: 'Montserrat', Arial, Verdana, serif;
  font-weight: bold;
  margin:0;
  -webkit-transition: color 0.3s ease-out;
  -moz-transition: color 0.3s ease-out;
  transition: color 0.3s ease-out;
}

.product-info { /* The smaller DIV within .product-listing that holds the product's name and price*/
  padding:1rem;
  border-top-style:solid;
  border-color: #CCC;
  border-top-width: 0.1rem;
  -webkit-transition: border-color, background-color 0.3s ease-out;
  -moz-transition: border-color, background-color 0.3s ease-out;
  transition: border-color, background-color 0.3s ease-out;
}

.product-listing:hover .product-info, .product-listing:focus .product-info { /* Setting the info box to change color on hover/focus */
  border-top-style:solid;
  border-top-color: #EFA867;
  border-top-width: 0.1rem;
  background-color: #EFA867;
}

.product-listing:hover p.product-name, .product-listing:focus p.product-name, .product-listing:hover p.product-price, .product-listing:focus p.product-price, .product-listing:hover p.product-date, .product-listing:focus p.product-date, .product-listing:hover p.product-sold, .product-listing:focus p.product-sold { /*  Setting the price, selling numbers, date, and name to change color on hover/focus */
  color:#FFF;
}

/* Styling for the Flexbox grid elements */

.container { /* The major flexbox container element - not used for overall grid layout, but for other flexible items */
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  flex-direction: -webkit-row;
  flex-direction: -ms-row;
  flex-direction: row;
  justify-content: -webkit-space-around;
  justify-content: -ms-space-around;
  justify-content: space-around;
  flex-wrap: -webkit-wrap;
  flex-wrap: -ms-wrap;
  flex-wrap:wrap;
}

.container-item { /* Individual items within the flexbox container */
  margin:1rem;
}

/* 
  CITATIONS -------------------
*/

ul.citations {
  margin-left: 0.25em;
  padding-left: 0.25em;
}

ul.citations li {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
  padding-bottom: 1em;
}

ul.citations li strong {
  font-weight: normal;
  font-style: italic;
}

cite {
  font-style: normal;
}

/* 
  TEMPLATES
*/

/*Navigation Bar*/

nav.fixed-nav-bar { /* The top navigation bar */
  position:absolute;
  width: 100%;
  -webkit-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
  -moz-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
  box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
  top:0; /* Keeps the navbar locked to the top of the screen */
  left:0;
  right:0;
  background-color:#FFF;
  margin-bottom:2rem;
}

/* The filter navigation bar */
/*
nav.filter-nav-bar { 
  text-align: right;
  width: 100%;
  -webkit-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
  -moz-box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
  box-shadow: 0 0.25rem 0.25rem 0 rgba(0,0,0,0.25);
  background-color:#FFF;
  margin-bottom:2rem;
}
*/

@media (min-width:56.25em) {
  nav.fixed-nav-bar {
    position:fixed; /* When the screen is big enough, lock the navbar to the top of the window */
    height:4rem;
  }
}

.img-navbar { /* When the screen is small, have the logo centered and above the navigation */
  display:block;
  margin:0 auto;
  padding:1em 0;
  max-height:4em;
  width:auto;
  opacity:1;
}

.img-navbar:hover, .img-navbar:focus { /* When the screen is small, have the logo centered and above the navigation */
  opacity:0.5;
  -webkit-transition: all 0.3s ease-out; 
  -moz-transition: all 0.3s ease-out; 
  -o-transition: all 0.3s ease-out; 
  transition: all 0.3s ease-out;
}

@media (min-width:56.25em) { /* With a larger screen, have the logo off to the left and float the navigation to the right */
  .img-navbar {
    max-height:100%;
    padding:1em 0 1em 2em;
    display:inline-block;
    float:left;
  }
}

nav ul { /* Align the navigation items to the center when the screen is small */
  width:100%;
  padding-right:2em;
  text-align:center;
}

@media (min-width:56.25em) { /* Send the navigation to the right when the screen increases in size */
  nav ul {
    display:block;
    text-align:right;
  }
}

nav ul li {
  list-style-type:none;
  display:inline-block; /* Navigation items are side-by-side with a larger screen size */
}

@media (max-width:42.5em) {
  nav ul li {
    width:100%; /* With a smaller screen size, navigation items are stacked on top of each other */
    padding:0.5em 0;
    border-bottom:0.1em solid #CCC;
  }

  nav ul li:last-of-type {
    border-bottom-style:none;
    padding:0.5em 0 0 0;
  }
}

/*Shopping Cart Item*/

.placeholder-img-cart-item, .placeholder-img-product-view { /* Placeholder images */
  width:100%;
  height:15em;
  background-color:#999;
}
/* ... */

